--- a/options.html
+++ b/options.html
@@ -4,12 +4,110 @@
   <meta charset="utf-8">
   <title>Jira Capture Tool - Settings</title>
   <style>
-    body { width:600px; margin:0; padding:12px; font-family:sans-serif; }
-    div, input, textarea, button { margin-top:8px; }
-    #promptsList ul { list-style: none; padding: 0; }
-    #promptsList li { margin-bottom:4px; }
-    input, textarea { width:100%; font-family:monospace; }
-    textarea { height: 20vh; }
+    :root {
+      --md-sys-color-primary: #6750A4;
+      --md-sys-color-on-primary: #FFFFFF;
+      --md-sys-color-secondary: #625B71;
+      --md-sys-color-on-secondary: #FFFFFF;
+      --md-sys-color-surface: #FFFBFE;
+      --md-sys-color-on-surface: #1C1B1F;
+      --md-sys-color-outline: #79747E;
+      --md-sys-elevation-surface: 0px 1px 2px rgba(0,0,0,0.05);
+      --md-sys-elevation-surface-variant: 0px 1px 3px rgba(0,0,0,0.1);
+      --md-sys-shape-corner-small: 4px;
+    }
+    body {
+      font-family: sans-serif;
+      background-color: var(--md-sys-color-surface);
+      color: var(--md-sys-color-on-surface);
+      margin: 0;
+      padding: 24px;
+      max-width: 600px;
+      box-sizing: border-box;
+    }
+    h2 {
+      font-size: 1.5rem;
+      font-weight: 500;
+      margin-bottom: 16px;
+    }
+    h3 {
+      font-size: 1.25rem;
+      font-weight: 500;
+      margin-top: 24px;
+      margin-bottom: 12px;
+    }
+    h4 {
+      font-size: 1rem;
+      font-weight: 500;
+      margin-top: 24px;
+      margin-bottom: 8px;
+    }
+    label {
+      display: block;
+      font-weight: 500;
+      margin-bottom: 4px;
+    }
+    div {
+      margin-bottom: 16px;
+    }
+    input, textarea, select {
+      width: 100%;
+      font-size: 1rem;
+      padding: 8px 12px;
+      border: 1px solid var(--md-sys-color-outline);
+      border-radius: var(--md-sys-shape-corner-small);
+      background-color: #FFFFFF;
+      color: var(--md-sys-color-on-surface);
+      box-sizing: border-box;
+    }
+    input:focus, textarea:focus, select:focus {
+      outline: none;
+      border-color: var(--md-sys-color-primary);
+      box-shadow: 0 0 0 2px rgba(103,80,164,0.2);
+    }
+    textarea {
+      min-height: 120px;
+      resize: vertical;
+    }
+    button {
+      font-size: 0.875rem;
+      font-weight: 500;
+      padding: 8px 16px;
+      min-height: 36px;
+      border: none;
+      border-radius: var(--md-sys-shape-corner-small);
+      background-color: var(--md-sys-color-primary);
+      color: var(--md-sys-color-on-primary);
+      cursor: pointer;
+      box-shadow: var(--md-sys-elevation-surface-variant);
+    }
+    button:hover {
+      box-shadow: 0px 2px 4px rgba(0,0,0,0.15);
+    }
+    button:disabled {
+      opacity: 0.38;
+      cursor: default;
+    }
+    #promptsList ul {
+      list-style: none;
+      padding: 0;
+    }
+    #promptsList li {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 8px;
+      background-color: #FFFFFF;
+      border-radius: var(--md-sys-shape-corner-small);
+      box-shadow: var(--md-sys-elevation-surface);
+      margin-bottom: 8px;
+    }
+    #promptsList li button {
+      background: none;
+      color: var(--md-sys-color-primary);
+      box-shadow: none;
+      padding: 4px 8px;
+    }
   </style>
 </head>
 <body>
